--- a/PARLAR-Activity8.css
+++ b/PARLAR-Activity8.css
@@ -2,3 +2,9 @@
     width:30%;
     margin: 2%;
 }
+table tr td input:invalid{
+
+    border: none;
+    outline: 2px solid red;
+    border-radius: 2px;
+}
